--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.29",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.10.3",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "hamburger-react": "^2.5.2",
+    "lucide-react": "^0.562.0",
     "mysql2": "^3.15.2",
     "next": "15.5.9",
     "next-sanity": "^11.5.5",
@@ -29,7 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
 }
