--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@heroui/button": "^2.2.29",
+    "@mui/material": "^7.3.7",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.10.3",
@@ -22,7 +25,6 @@
     "next-sanity": "^11.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sanity": "^4.10.3",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
+    "sanity": "^4.10.3",
     "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
