--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/vision": "^4.10.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.25.0",
     "hamburger-react": "^2.5.2",
     "lucide-react": "^0.562.0",
     "mysql2": "^3.15.2",
