--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
+    "@sanity/types": "^5.2.0",
     "@sanity/vision": "^4.10.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
