--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@heroui/button": "^2.2.29",
     "@mui/material": "^7.3.7",
+    "@portabletext/react": "^6.0.2",
     "@radix-ui/react-label": "^2.1.8",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
